--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ixp-digital-twin"]
+[submodule "services/backend/src/digital_twin"]
 	path = services/backend/src/digital_twin
 	url = https://github.com/KatharaFramework/ixp-digital-twin
